--- a/style.css
+++ b/style.css
@@ -202,6 +202,35 @@ body {
     border: dashed #232323;
 }
 
+.price-title {
+    padding: 0;
+    margin: 10;
+    text-align: center;
+    font-size: 60px;
+}
+
+.price-list {
+    display: flex;
+}
+
+.price-text {
+    padding: 5px;
+    margin: 10px;
+    font-size: 20px;
+    border-radius: 20%;
+    border: dashed #232323
+}
+
+.price-subtitle {
+    font-size: 30px;
+    border-radius: 20%;
+    border: dashed #232323;
+    padding: 5px;
+    margin: 10px;
+    
+}
+
+
 
 
 
